# WorkShop-TDD-DjangoCon

./: .replit  README.md  commands  pyproject.toml
carts/: models.py  tests.py  views.py
carts/migrations/: 0002_rename_sku_cartline_reference.py
